--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
